<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/padding_general"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.androidstudiocourse.c3t2_try2.MainActivity">

    <LinearLayout
        android:padding="@dimen/padding_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ll_main"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/til_name">

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="textPersonName" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tvName"/>

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_nacimiento2"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <LinearLayout
                android:layout_width="@dimen/date_ll_width"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/barra2_height"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/padding_set_date"
                    android:layout_marginBottom="@dimen/padding_set_date">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <Button
                            android:id="@+id/picDate"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:theme="@style/MiRaisedButton"
                            android:text="@string/setDate"
                            android:textSize="14sp"
                            android:onClick="datePicker"/>

                    </RelativeLayout>


                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:id="@+id/showDate" />
        </RelativeLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/til_phone">

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone"
                android:inputType="phone" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/til_mail">

            <EditText
                android:id="@+id/editMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_mail"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/til_descripcion">

            <EditText
                android:id="@+id/editDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_descripcion"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <Button
        android:id="@+id/button_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="siguiente"
        android:text="@string/button_next"
        android:theme="@style/MiRaisedButton"/>




</RelativeLayout>
